<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/speedway2p"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/middle">

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/name1" />

            <TextView
                android:id="@+id/home_score"
                style="@style/TextViewStyle"
                android:layout_marginBottom="@dimen/middle"
                android:text="@string/score1"
                android:textSize="@dimen/score" />

        </LinearLayout>

        <View
            android:layout_width="@dimen/line"
            android:layout_height="match_parent"
            android:background="@android:color/background_light" />

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/name2" />

            <TextView
                android:id="@+id/guest_score"
                style="@style/TextViewStyle"
                android:layout_marginBottom="@dimen/middle"
                android:text="@string/score2"
                android:textSize="@dimen/score" />

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewStyle"
                        android:layout_marginBottom="@dimen/little"
                        android:drawableLeft="@drawable/ic_helmet_red"
                        android:paddingLeft="@dimen/middle"
                        android:text="@string/hp1" />

                    <Button
                        style="@style/ButtonStyle"
                        android:onClick="add3ToH"
                        android:text="@string/points3" />

                    <Button
                        style="@style/ButtonStyle"
                        android:onClick="add2ToH"
                        android:text="@string/points2" />

                    <Button
                        style="@style/ButtonStyle"
                        android:onClick="add1ToH"
                        android:text="@string/points1" />

                    <TextView
                        style="@style/TextViewStyle"
                        android:layout_marginBottom="@dimen/little"
                        android:layout_marginTop="@dimen/middle"
                        android:drawableLeft="@drawable/ic_helmet_blue"
                        android:paddingLeft="@dimen/helm"
                        android:text="@string/hp2" />

                    <Button
                        style="@style/ButtonStyle"
                        android:onClick="add3ToH"
                        android:text="@string/points3" />

                    <Button
                        style="@style/ButtonStyle"
                        android:onClick="add2ToH"
                        android:text="@string/points2" />

                    <Button
                        style="@style/ButtonStyle"
                        android:onClick="add1ToH"
                        android:text="@string/points1" />

                </LinearLayout>

                <View
                    android:layout_width="@dimen/line"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/background_light" />

                <LinearLayout
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewStyle"
                        android:layout_marginBottom="@dimen/little"
                        android:drawableLeft="@drawable/ic_helmet_yellow"
                        android:paddingLeft="@dimen/middle"
                        android:text="@string/gp1" />

                    <Button
                        style="@style/ButtonStyle"
                        android:onClick="add3ToG"
                        android:text="@string/points3" />

                    <Button
                        style="@style/ButtonStyle"
                        android:onClick="add2ToG"
                        android:text="@string/points2" />

                    <Button
                        style="@style/ButtonStyle"
                        android:onClick="add1ToG"
                        android:text="@string/points1" />

                    <TextView
                        style="@style/TextViewStyle"
                        android:layout_marginBottom="@dimen/little"
                        android:layout_marginTop="@dimen/middle"
                        android:drawableLeft="@drawable/ic_helmet_white"
                        android:paddingLeft="@dimen/helm"
                        android:text="@string/gp2" />

                    <Button
                        style="@style/ButtonStyle"
                        android:onClick="add3ToG"
                        android:text="@string/points3" />

                    <Button
                        style="@style/ButtonStyle"
                        android:onClick="add2ToG"
                        android:text="@string/points2" />

                    <Button
                        style="@style/ButtonStyle"
                        android:onClick="add1ToG"
                        android:text="@string/points1" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/middle"
                android:layout_marginTop="@dimen/middle"
                android:onClick="reset"
                android:text="@string/but_res" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
